# wrath

./: .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check.yml
hooks/: pre-commit
wrath/: __main__.py  bpf.py  cli.py  core.py  net.py
