[project]
name = "wrath"
version = "0.1.0"
description = "A TCP SYN reconnaissance tool"
authors = [{name = "xqb64", email = "x@nuked.one"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "trio >= 0.23.1",
    "click >= 8.0.3",
    "click-option-group >= 0.5.3",
    "tractor @ git+https://github.com/goodboy/tractor",
    "more-itertools >= 8.10.0",
    "attrs >= 23.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy >= 1.7.1",
    "ruff >= 0.1.6",
]

[tool.setuptools.packages.find]
where = ["wrath"]
